# Ai-Agent-Learning

./: README.md  config.py  main.py  pyproject.toml  req.txt
agents/: __init__.py  base.py  code.py  creative.py  research.py  task.py
data/memory/: conversations.db
data/memory/sessions/: 3a24e951-6241-4628-b9f3-82d05b672856.json  43cad6b1-dbb9-4405-bdae-c45ec199a6cc.json  f7e32df8-303e-41c8-b312-c2924b0de4d0.json
memory/: __init__.py  context.py  storage.py
orchestration/: __init__.py  coordinator.py  router.py
tools/: __init__.py  code_exec.py  file_ops.py  web_search.py
utils/: __init__.py  cli_helpers.py  logger.py
