[project]
name = "b3nt3x-workspace-ai"
version = "0.1.0"
description = "ai workspace"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "asyncio>=4.0.0",
    "click>=8.2.1",
    "openai>=1.99.9",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "rich>=14.1.0",
]
